--- a/index.html
+++ b/index.html
@@ -189,10 +189,12 @@
             // - `unit`: How the item is measured. If it's by weight/volume, include a number (e.g., '100g', '150ml'). If it's a single item, use a description (e.g., 'item', 'slice', 'pot').
              breakfasts: [
                 { name: "Pain Au Chocolat", baseCalories: 188, unit: 'item' },
+                { name: "Chocolate Chip Brioche Roll", baseCalories: 115, unit: 'item' },
+                { name: "Chocolate Mini Roll", baseCalories: 116, unit: 'item' },
                 { name: "Ham & Cheese Toastie", baseCalories: 350, unit: 'item' },
-                { name: "Sliced Bread", baseCalories: 96, unit: 'slice' },
                 { name: "Nutoka Sandwhich", baseCalories: 300, unit: 'item' },
                 { name: "Peanut Butter Sandwhich", baseCalories: 315, unit: 'item' },
+                { name: "Sliced Bread", baseCalories: 96, unit: 'slice' },
                 { name: "Thin Ham", baseCalories: 10, unit: 'slice' },
                 { name: "Cheese", baseCalories: 100, unit: 'slice' },
                 { name: "Salami", baseCalories: 32, unit: 'slice' },
@@ -211,6 +213,7 @@
                 { name: "Banana", baseCalories: 89, unit: 'item' },
                 { name: "Strawberries", baseCalories: 33, unit: '100g' },
                 { name: "Apple", baseCalories: 95, unit: 'item' },
+                { name: "ALDI Triple Chocolate Muffins", baseCalories: 308, unit: 'item' },
                 { name: "LIDL Artisan Baguette", baseCalories: 293, unit: 'half' },
                 { name: "LIDL Baguette", baseCalories: 378, unit: 'half' },
                 { name: "LIDL Pizza", baseCalories: 260, unit: 'item' },
@@ -229,10 +232,10 @@
                 { name: "Beef Mince (10%)", baseCalories: 215, unit: '125g' },
                 { name: "Pork Mince (12%)", baseCalories: 230, unit: '125g' },
                 { name: "Beef Meatballs (5%)", baseCalories: 33, unit: 'meatball' },
-                { name: "Chicken Thigh", baseCalories: 186, unit: '100g' },
+                { name: "Chicken Thighs", baseCalories: 186, unit: '100g' },
                 { name: "Chicken Tikka", baseCalories: 205, unit: '125g' },
-                { name: "Beef Thin Steak", baseCalories: 146, unit: 'steak' },
-                { name: "Beef Thick Steak", baseCalories: 188, unit: 'steak' },
+                { name: "Beef Thin Steaks", baseCalories: 146, unit: 'steak' },
+                { name: "Beef Thick Steaks", baseCalories: 188, unit: 'steak' },
                 { name: "Breaded Chicken Steak", baseCalories: 270, unit: 'steak' },
                 { name: "Pork Loin Steak", baseCalories: 204, unit: 'steak' },
                 { name: "Pork Shoulder Steak", baseCalories: 295, unit: 'steak' },
@@ -279,6 +282,7 @@
                 { name: "Mixed Peppers", baseCalories: 25, unit: '100g' },
                 { name: "Mushrooms", baseCalories: 19, unit: '100g' },
                 { name: "Burger Buns", baseCalories: 130, unit: 'bun' },
+                { name: "White Tortilla Wrap", baseCalories: 181, unit: 'wrap' },
                 { name: "Garlic Bread", baseCalories: 135, unit: 'quarter' },
                 { name: "Naan Bread", baseCalories: 400, unit: 'naan' },
                 { name: "Onion Bhaji", baseCalories: 130, unit: 'bhaji' },
@@ -612,8 +616,4 @@
     </script>
 </body>
 </html>
-
-
-
-
 
