--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
                 { name: "Cheese", baseCalories: 100, unit: 'slice' },
                 { name: "Salami", baseCalories: 32, unit: 'slice' },
                 { name: "Back Bacon", baseCalories: 106, unit: 'slice' },
+                { name: "Butter (Light)", baseCalories: 46, unit: '10g' },
                 { name: "Peanut Butter", baseCalories: 155, unit: '25g' },
                 { name: "Nutoka", baseCalories: 138, unit: '25g' },
                 { name: "Yoghurt", baseCalories: 100, unit: 'pot' },
@@ -625,6 +626,7 @@
     </script>
 </body>
 </html>
+
 
 
 
