--- a/index.html
+++ b/index.html
@@ -216,6 +216,8 @@
                 { name: "Strawberries", baseCalories: 33, unit: '100g' },
                 { name: "Grapes", baseCalories: 60, unit: '100g' },
                 { name: "Apple", baseCalories: 95, unit: 'item' },
+                { name: "Homemade Nutoka Croissant (20g)", baseCalories: 316, unit: 'item' },
+                { name: "Homemade Peanut Butter Croissant (20g)", baseCalories: 330, unit: 'item' },
                 { name: "ALDI Triple Chocolate Muffins", baseCalories: 308, unit: 'item' },
                 { name: "LIDL Artisan Baguette", baseCalories: 293, unit: 'half' },
                 { name: "LIDL Baguette", baseCalories: 378, unit: 'half' },
@@ -626,6 +628,7 @@
     </script>
 </body>
 </html>
+
 
 
 
