--- a/index.html
+++ b/index.html
@@ -320,6 +320,7 @@
                 { name: "Chocolate Yoghurt", baseCalories: 112, unit: 'pot' },
                 { name: "Crisps", baseCalories: 132, unit: '25g bag' },
                 { name: "Popcorn", baseCalories: 741, unit: '100g' },
+                { name: "LIDL Strawberry Cheesecake", baseCalories: 303, unit: 'quarter' },
                 { name: "Triple Chocolate Cookie Mix", baseCalories: 360, unit: 'quarter' },
                 { name: "Milk Chocolate Cookie Mix", baseCalories: 360, unit: 'quarter' },
                 { name: "White Chocolate Cookie Mix", baseCalories: 360, unit: 'quarter' },
@@ -628,6 +629,7 @@
     </script>
 </body>
 </html>
+
 
 
 
