--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@
                 { name: "Pork Strips", baseCalories: 172, unit: '120g' },
                 { name: "Beef Mince (10%)", baseCalories: 215, unit: '125g' },
                 { name: "Pork Mince (12%)", baseCalories: 230, unit: '125g' },
+                { name: "Meat-Free Mince", baseCalories: 110, unit: '100g' },
                 { name: "Beef Meatballs (5%)", baseCalories: 33, unit: 'meatball' },
                 { name: "Chicken Thighs", baseCalories: 372, unit: '100g' },
                 { name: "Chicken Tikka", baseCalories: 205, unit: '125g' },
@@ -629,11 +630,4 @@
     </script>
 </body>
 </html>
-
-
-
-
-
-
-
 
