--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                 { name: "Thai Green Paste", baseCalories: 110, unit: 'half jar' },
                 { name: "Carbonara", baseCalories: 185, unit: 'serving' },
                 { name: "Maggi Spice Bag", baseCalories: 117, unit: 'pack' },
-                { name: "Spaghetti Bolognese Mix", baseCalories: 66, unit: 'half pack' },
+                { name: "Bolognese Mix", baseCalories: 66, unit: 'half pack' },
                 { name: "Custom Item", baseCalories: 1, unit: '1 kcal' }
             ],
             sides: [
@@ -631,4 +631,5 @@
     </script>
 </body>
 </html>
+
 
