--- a/index.html
+++ b/index.html
@@ -303,6 +303,8 @@
                 { name: "Custom Item", baseCalories: 1, unit: '1 kcal' }
             ],
             desserts: [
+                { name: "Chocolate Mousse", baseCalories: 91, unit: 'pot' },
+                { name: "Chocolate Desserts (Morrisons)", baseCalories: 124, unit: 'pot' },
                 { name: "Custard Creams", baseCalories: 64, unit: 'biscuit' },
                 { name: "Cookies", baseCalories: 52, unit: 'biscuit' },
                 { name: "Caramelised Biscuits", baseCalories: 40, unit: 'biscuit' },
@@ -319,7 +321,6 @@
                 { name: "Dark Chocolate Bar", baseCalories: 267, unit: 'half bar' },
                 { name: "Milk Chocolate Bar", baseCalories: 267, unit: 'half bar' },
                 { name: "White Chocolate Bar", baseCalories: 279, unit: 'half bar' },
-                { name: "Chocolate Yoghurt", baseCalories: 112, unit: 'pot' },
                 { name: "Crisps", baseCalories: 132, unit: '25g bag' },
                 { name: "Popcorn", baseCalories: 741, unit: '100g' },
                 { name: "LIDL Strawberry Cheesecake", baseCalories: 303, unit: 'quarter' },
@@ -631,5 +632,6 @@
     </script>
 </body>
 </html>
+
 
 
