--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
             ],
             desserts: [
                 { name: "Chocolate Mousse", baseCalories: 91, unit: 'pot' },
-                { name: "Chocolate Desserts (Morrisons)", baseCalories: 124, unit: 'pot' },
+                { name: "Chocolate Desserts", baseCalories: 124, unit: 'pot' },
                 { name: "Custard Creams", baseCalories: 64, unit: 'biscuit' },
                 { name: "Cookies", baseCalories: 52, unit: 'biscuit' },
                 { name: "Caramelised Biscuits", baseCalories: 40, unit: 'biscuit' },
@@ -632,6 +632,7 @@
     </script>
 </body>
 </html>
+
 
 
 
