--- a/index.html
+++ b/index.html
@@ -188,12 +188,11 @@
             // - `baseCalories`: The calorie count for the defined unit.
             // - `unit`: How the item is measured. If it's by weight/volume, include a number (e.g., '100g', '150ml'). If it's a single item, use a description (e.g., 'item', 'slice', 'pot').
              breakfasts: [
-                { name: "Pain Au Chocolat", baseCalories: 188, unit: 'item' },
-                { name: "Chocolate Chip Brioche Roll", baseCalories: 115, unit: 'item' },
-                { name: "Chocolate Mini Roll", baseCalories: 116, unit: 'item' },
+		{ name: "-- Sandwiches", baseCalories: 0, unit: 'item' },
                 { name: "Ham & Cheese Toastie", baseCalories: 350, unit: 'item' },
-                { name: "Nutoka Sandwhich (25g)", baseCalories: 330, unit: 'item' },
                 { name: "Peanut Butter Sandwhich (25g)", baseCalories: 350, unit: 'item' },
+                { name: "Nutoka Sandwhich (25g)", baseCalories: 330, unit: 'item' },
+                { name: "Biscuit Spread Sandwhich (25g)", baseCalories: 336, unit: 'item' },
                 { name: "Sliced Bread", baseCalories: 96, unit: 'slice' },
                 { name: "Thin Ham", baseCalories: 10, unit: 'slice' },
                 { name: "Cheese", baseCalories: 100, unit: 'slice' },
@@ -202,23 +201,34 @@
                 { name: "Butter (Light)", baseCalories: 46, unit: '10g' },
                 { name: "Peanut Butter", baseCalories: 155, unit: '25g' },
                 { name: "Nutoka", baseCalories: 138, unit: '25g' },
-                { name: "Yoghurt", baseCalories: 100, unit: 'pot' },
-                { name: "Fromage Frais", baseCalories: 42, unit: 'pot' },
-                { name: "Coffee", baseCalories: 10, unit: 'cup' },
-                { name: "Latte", baseCalories: 80, unit: 'cup' },
+                { name: "Biscuits Spread", baseCalories: 144, unit: '25g' },
+		{ name: "-- Cereals", baseCalories: 0, unit: 'item' },
                 { name: "Milk", baseCalories: 70, unit: '150ml' },
                 { name: "Chocolate Fudge Milk", baseCalories: 148, unit: '200ml' },
                 { name: "Cereal (Honey Nut)", baseCalories: 119, unit: '30g' },
                 { name: "Cereal (Honey Hoops)", baseCalories: 113, unit: '30g' },
                 { name: "Cereal (Chocolate Pillows)", baseCalories: 170, unit: '40g' },
                 { name: "Cereal (Porridge)", baseCalories: 147, unit: '40g' },
+		{ name: "-- Yoghurts", baseCalories: 0, unit: 'item' },
+                { name: "Yoghurt", baseCalories: 100, unit: 'pot' },
+                { name: "Fromage Frais", baseCalories: 42, unit: 'pot' },
+		{ name: "-- Bakery", baseCalories: 0, unit: 'item' },
+                { name: "Pain Au Chocolat", baseCalories: 188, unit: 'item' },
+                { name: "Chocolate Chip Brioche Roll", baseCalories: 115, unit: 'item' },
+                { name: "Chocolate Mini Roll", baseCalories: 116, unit: 'item' },
+                { name: "Triple Chocolate Muffins", baseCalories: 308, unit: 'item' },
+		{ name: "-- Coffee", baseCalories: 0, unit: 'item' },
+                { name: "Coffee", baseCalories: 10, unit: 'cup' },
+                { name: "Latte", baseCalories: 80, unit: 'cup' },
+		{ name: "-- Homemade", baseCalories: 0, unit: 'item' },
+                { name: "Homemade Nutoka Croissant (20g)", baseCalories: 316, unit: 'item' },
+                { name: "Homemade Peanut Butter Croissant (20g)", baseCalories: 330, unit: 'item' },
+		{ name: "-- Fruits", baseCalories: 0, unit: 'item' },
                 { name: "Banana", baseCalories: 89, unit: 'item' },
                 { name: "Strawberries", baseCalories: 33, unit: '100g' },
                 { name: "Grapes", baseCalories: 60, unit: '100g' },
                 { name: "Apple", baseCalories: 95, unit: 'item' },
-                { name: "Homemade Nutoka Croissant (20g)", baseCalories: 316, unit: 'item' },
-                { name: "Homemade Peanut Butter Croissant (20g)", baseCalories: 330, unit: 'item' },
-                { name: "ALDI Triple Chocolate Muffins", baseCalories: 308, unit: 'item' },
+		{ name: "-- Store Bakery", baseCalories: 0, unit: 'item' },
                 { name: "LIDL Artisan Baguette", baseCalories: 293, unit: 'half' },
                 { name: "LIDL Baguette", baseCalories: 378, unit: 'half' },
                 { name: "LIDL Pizza", baseCalories: 260, unit: 'item' },
@@ -232,6 +242,7 @@
                 { name: "Custom Item", baseCalories: 1, unit: '1 kcal' }
             ],
             mains: [
+		{ name: "-- Meals", baseCalories: 0, unit: 'item' },
                 { name: "Pancetta", baseCalories: 236, unit: 'half pack' },
                 { name: "Sausages", baseCalories: 76, unit: 'sausage' },
                 { name: "Pork Strips", baseCalories: 172, unit: '120g' },
@@ -243,8 +254,8 @@
                 { name: "Chicken Thigh Fillets", baseCalories: 322, unit: '200g' },
                 { name: "Chicken Breast Tikka", baseCalories: 205, unit: '125g' },
                 { name: "Breaded Chicken Steak", baseCalories: 270, unit: 'steak' },
-                { name: "Beef Thin Steaks", baseCalories: 146, unit: 'steak' },
-                { name: "Beef Thick Steaks", baseCalories: 188, unit: 'steak' },
+                { name: "Beef Thin Steak", baseCalories: 146, unit: 'steak' },
+                { name: "Beef Thick Steak", baseCalories: 188, unit: 'steak' },
                 { name: "Pork Loin Steak", baseCalories: 204, unit: 'steak' },
                 { name: "Pork Shoulder Steak", baseCalories: 295, unit: 'steak' },
                 { name: "Battered Fish Fillet", baseCalories: 244, unit: 'fillet' },
@@ -259,12 +270,13 @@
                 { name: "Red Pepper & Mozzarella Parcel", baseCalories: 437, unit: 'lattice' },
                 { name: "Three Cheese Lattice", baseCalories: 426, unit: 'lattice' },
                 { name: "ALDI KFC", baseCalories: 900, unit: 'half pack' },
+                { name: "Francesinha", baseCalories: 1500, unit: 'item' },
                 { name: "Shin Ramyun", baseCalories: 450, unit: 'pack' },
-                { name: "Chicken Nuggets", baseCalories: 44, unit: 'nugget' },
-                { name: "Chicken Dippers", baseCalories: 37, unit: 'dipper' },
+                { name: "Iceland Chicken Nuggets", baseCalories: 44, unit: 'nugget' },
+                { name: "Iceland Chicken Dippers", baseCalories: 37, unit: 'dipper' },
+		{ name: "-- Ready Meals", baseCalories: 0, unit: 'item' },
                 { name: "Iceland Shanghai Beef Noodles", baseCalories: 403, unit: 'pack' },
                 { name: "Iceland Char Siu Pork & Noodles", baseCalories: 535, unit: 'pack' },
-                { name: "Francesinha", baseCalories: 1500, unit: 'item' },
                 { name: "Custom Item", baseCalories: 1, unit: '1 kcal' }
             ],
             sauces: [
@@ -303,8 +315,10 @@
                 { name: "Custom Item", baseCalories: 1, unit: '1 kcal' }
             ],
             desserts: [
+		{ name: "-- Yoghurts", baseCalories: 0, unit: 'item' },
                 { name: "Chocolate Mousse", baseCalories: 91, unit: 'pot' },
                 { name: "Chocolate Desserts", baseCalories: 124, unit: 'pot' },
+		{ name: "-- Biscuits", baseCalories: 0, unit: 'item' },
                 { name: "Custard Creams", baseCalories: 64, unit: 'biscuit' },
                 { name: "Cookies", baseCalories: 52, unit: 'biscuit' },
                 { name: "Caramelised Biscuits", baseCalories: 40, unit: 'biscuit' },
@@ -318,12 +332,16 @@
                 { name: "Oaties", baseCalories: 70, unit: 'biscuit' },
                 { name: "Chocolate Oaties", baseCalories: 84, unit: 'biscuit' },
                 { name: "M&S Biscuits", baseCalories: 250, unit: '48g' },
+		{ name: "-- Chocolates", baseCalories: 0, unit: 'item' },
                 { name: "Dark Chocolate Bar", baseCalories: 267, unit: 'half bar' },
                 { name: "Milk Chocolate Bar", baseCalories: 267, unit: 'half bar' },
                 { name: "White Chocolate Bar", baseCalories: 279, unit: 'half bar' },
+		{ name: "-- Snacks", baseCalories: 0, unit: 'item' },
                 { name: "Crisps", baseCalories: 132, unit: '25g bag' },
                 { name: "Popcorn", baseCalories: 741, unit: '100g' },
+		{ name: "-- Other", baseCalories: 0, unit: 'item' },
                 { name: "LIDL Strawberry Cheesecake", baseCalories: 303, unit: 'quarter' },
+		{ name: "-- Baking", baseCalories: 0, unit: 'item' },
                 { name: "Triple Chocolate Cookie Mix", baseCalories: 360, unit: 'quarter' },
                 { name: "Milk Chocolate Cookie Mix", baseCalories: 360, unit: 'quarter' },
                 { name: "White Chocolate Cookie Mix", baseCalories: 360, unit: 'quarter' },
@@ -632,7 +650,4 @@
     </script>
 </body>
 </html>
-
-
-
 
